[webspoon-9.0] Rebase against master